Agregando elemento li a los botones del rating

--- a/src/styles/components/RatingCard.scss
+++ b/src/styles/components/RatingCard.scss
@@ -44,6 +44,10 @@
     align-items: center;
   }
 
+  &-itemRatingList {
+    list-style-type: none;
+  }
+
   &-ratingButton {
     width: 40px;
     height: 40px;
